package fr.ensma.a3.ia.element;


public interface IElementJeu {
    @Override
    String toString();
}
