package fr.ensma.a3.ia.element.comportement;

public interface IAttaquable {
    public void estAttaque(final Integer NivPuis);
    public String getIdentifiantPerson();
}
