package fr.ensma.a3.ia.element.comportement.attaques;

public interface ICompoAttaque {
}
